# aoc2022

./: .gitattributes  Cargo.toml
src/: galois.rs  lib.rs  util.rs
