[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10.5"
regex = "1"
lazy_static = "1.4.0"
petgraph = "0.6.2"
ndarray = "0.15.6"
nalgebra = "0.31.4"
nom = "7"
